# cargo-gpu

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: push.yaml
crates/cargo-gpu/: Cargo.toml
crates/cargo-gpu-build/: Cargo.toml
crates/cargo-gpu-build/src/: build.rs  lib.rs  lockfile.rs  merge.rs  metadata.rs
crates/cargo-gpu-cache/: Cargo.toml
crates/cargo-gpu-cache/src/: build.rs  config.rs  dump_usage.rs  install.rs  install_toolchain.rs  lib.rs  lockfile.rs  metadata.rs  show.rs  spirv_source.rs  target_specs.rs  test.rs
crates/cargo-gpu-cli/: Cargo.toml
crates/cargo-gpu-install/: Cargo.toml
crates/cargo-gpu-install/src/: install.rs  install_toolchain.rs  lib.rs  spirv_source.rs
crates/cargo-gpu-test-utils/: Cargo.toml
crates/cargo-gpu-test-utils/src/: lib.rs
crates/cargo-gpu/src/: args.rs  build.rs  config.rs  dump_usage.rs  install.rs  install_toolchain.rs  legacy_target_specs.rs  lib.rs  linkage.rs  lockfile.rs  main.rs  metadata.rs  naga.rs  show.rs  spirv_cli.rs  spirv_source.rs  target_specs.rs  test.rs  user_consent.rs
crates/rustc_codegen_spirv-cache/: Cargo.toml
crates/rustc_codegen_spirv-cache/src/: backend.rs  cache.rs  cache_dir.rs  command.rs  lib.rs  metadata.rs  spirv_source.rs  target_specs.rs  toolchain.rs
crates/rustc_codegen_spirv-cache/src/dummy/: Cargo.toml
crates/shader-crate-template/: Cargo.toml
crates/spirv-builder-cli/src/: args.rs  main.rs
crates/test-shaders/: Cargo.toml
crates/test-shaders/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
output/: duplicate_main.1.spv  manifest.json
scripts/: build_shader_template.sh
