[workspace]
members = [
	"crates/rustc_codegen_spirv-cache",
	"crates/cargo-gpu-build",
	"crates/cargo-gpu",
	"crates/xtask",
]

exclude = [
	# This currently needs to be excluded because it depends on a version of `rust-gpu` that
	# uses a toolchain whose Cargo version doesn't recognise version 4 of `Cargo.lock`.
	"crates/shader-crate-template"
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Rust-GPU/cargo-gpu"
keywords = ["gpu", "compiler", "rust-gpu"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu", rev = "3df836eb9d7b01344f52737bf9a310d1fb5a0c26", default-features = false }
anyhow = "1.0.98"
thiserror = "2.0.12"
clap = { version = "4.5.41", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
env_logger = "0.11.8"
log = "0.4"
relative-path = "2.0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
toml = "0.9.2"
tempfile = "3.22"
test-log = "0.2.18"
cargo_metadata = "0.21.0"
cargo-util-schemas = "0.8.2"
semver = "1.0.26"
dunce = "1.0.5"

# This crate MUST NEVER be upgraded, we need this particular "first" version to support old rust-gpu builds
legacy_target_specs = { package = "rustc_codegen_spirv-target-specs", version = "0.9.0", features = ["include_str"] }

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = 0 }
pedantic = { level = "warn", priority = 0 }
nursery = { level = "warn", priority = 0 }
cargo = { level = "warn", priority = 0 }
restriction = { level = "warn", priority = 0 }
blanket_clippy_restriction_lints = { level = "allow", priority = 1 }

arithmetic_side_effects = { level = "allow", priority = 1 }
absolute_paths = { level = "allow", priority = 1 }
cargo_common_metadata = { level = "allow", priority = 1 }
implicit_return = { level = "allow", priority = 1 }
single_call_fn = { level = "allow", priority = 1 }
question_mark_used = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
pub_with_shorthand = { level = "allow", priority = 1 }
partial_pub_fields = { level = "allow", priority = 1 }
pattern_type_mismatch = { level = "allow", priority = 1 }
std_instead_of_alloc = { level = "allow", priority = 1 }
arbitrary_source_item_ordering = { level = "allow", priority = 1 }
