[package]
name = "cargo-gpu-build"
description = "Builder of `rust-gpu` shader crates"
version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
rustc_codegen_spirv-cache = { path = "../rustc_codegen_spirv-cache" }
spirv-builder.workspace = true
anyhow.workspace = true
semver.workspace = true
log.workspace = true

[features]
# Rebuilds target shader crate upon changes
watch = ["spirv-builder/watch"]
# Enables `clap` support for public structs
clap = ["spirv-builder/clap", "rustc_codegen_spirv-cache/clap"]

[lints]
workspace = true
