[package]
name = "cargo-gpu-install"
version.workspace = true
edition.workspace = true
description = "Install rust-gpu and it's required toolchain automatically"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true

[features]
test = ["dep:tempfile"]

[dependencies]
cargo_metadata.workspace = true
anyhow.workspace = true
spirv-builder = { workspace = true, features = ["clap", "watch"] }
clap.workspace = true
directories.workspace = true
log.workspace = true
serde.workspace = true
crossterm.workspace = true
tempfile = { workspace = true, optional = true }

[dev-dependencies]
test-log.workspace = true
cargo_metadata = { workspace = true, features = ["builder"] }
cargo-util-schemas = "0.8.2"

[lints]
workspace = true
