[package]
name = "cargo-gpu"
description = "Generates shader .spv files from rust-gpu shader crates"
readme = "../../README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
default-run = "cargo-gpu"

[dependencies]
cargo-gpu-build = { path = "../cargo-gpu-build", default-features = false }
cargo_metadata.workspace = true
anyhow.workspace = true
spirv-builder = { workspace = true, features = ["clap", "watch"] }
clap.workspace = true
env_logger.workspace = true
log.workspace = true
relative-path.workspace = true
serde.workspace = true
serde_json.workspace = true
crossterm.workspace = true
semver.workspace = true
dunce.workspace = true

[dev-dependencies]
tempfile.workspace = true
test-log.workspace = true
cargo_metadata = { workspace = true, features = ["builder"] }

[lints]
workspace = true
