[package]
name = "cargo-gpu"
description = "Generates shader .spv files from rust-gpu shader crates"
readme = "../../README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
default-run = "cargo-gpu"

[dependencies]
cargo-gpu-build = { path = "../cargo-gpu-build", features = ["clap", "watch"] }
spirv-builder = { workspace = true, features = ["clap", "watch"] }
cargo_metadata.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
relative-path.workspace = true
serde.workspace = true
serde_json.workspace = true
crossterm.workspace = true
dunce.workspace = true

[dev-dependencies]
tempfile.workspace = true
test-log.workspace = true
cargo_metadata = { workspace = true, features = ["builder"] }

[lints]
workspace = true
