[package]
name = "cargo-gpu"
version.workspace = true
edition.workspace = true
description = "Generates shader .spv files from rust-gpu shader crates"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
default-run = "cargo-gpu"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata.workspace = true
anyhow.workspace = true
spirv-builder = { workspace = true, features = ["clap", "watch"] }
clap.workspace = true
directories.workspace = true
env_logger.workspace = true
log.workspace = true
relative-path.workspace = true
serde.workspace = true
serde_json.workspace = true
crossterm.workspace = true
semver.workspace = true
dunce.workspace = true

[dev-dependencies]
tempfile.workspace = true
test-log.workspace = true
cargo_metadata = { workspace = true, features = ["builder"] }
cargo-util-schemas = "0.8.2"

[lints]
workspace = true
