[package]
name = "rustc_codegen_spirv-cache"
description = "Cacher of `rust-gpu` codegen for required toolchain"
version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
directories.workspace = true
cargo_metadata.workspace = true

[dev-dependencies]
test-log.workspace = true
cargo-util-schemas.workspace = true

[lints]
workspace = true
