[package]
name = "rustc_codegen_spirv-cache"
description = "Cacher of `rust-gpu` codegen for required toolchain"
version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
spirv-builder.workspace = true
legacy_target_specs.workspace = true
thiserror.workspace = true
directories.workspace = true
cargo_metadata.workspace = true
log.workspace = true
serde.workspace = true
clap = { workspace = true, optional = true }

[dev-dependencies]
test-log.workspace = true
cargo-util-schemas.workspace = true

[features]
# Enables `clap` support for public structs
clap = ["dep:clap", "spirv-builder/clap"]

[lints]
workspace = true
